HousingForce/src/objects/Housing__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is this housing available?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amenities__c</fullName>
        <label>Amenities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gym</fullName>
                </value>
                <value>
                    <fullName>Parking_Passes</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Parking: Gated</fullName>
                </value>
                <value>
                    <fullName>Parking: Driveway</fullName>
                </value>
                <value>
                    <fullName>Parking: Garage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Occupants__c</fullName>
        <label>Current Occupants</label>
        <summaryForeignKey>Housing_Assignment__c.Housing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Group_Designation__c</fullName>
        <label>Group Designation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Men only</fullName>
                </value>
                <value>
                    <fullName>Women only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Occupants__c</fullName>
        <defaultValue>6</defaultValue>
        <inlineHelpText>Max number of occupants</inlineHelpText>
        <label>Max Occupants</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Housing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Group_Designation__c</columns>
        <columns>Current_Occupants__c</columns>
        <columns>Max_Occupants__c</columns>
        <columns>Address__c</columns>
        <columns>Amenities__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Housing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housings</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Check_ActiveCantBeDeactivated</fullName>
        <active>true</active>
        <description>If the House has people living there. You cannot deactivate. This Also wont allow you to add in people if it is deactivated.</description>
        <errorConditionFormula>IF(Active__c = false &amp;&amp;  Current_Occupants__c != 0,true,false)</errorConditionFormula>
        <errorMessage>You cannot deactivate this housing unit if people are still living there or cant add people if its not activated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_ifDeactivatedCantAddTenants</fullName>
        <active>false</active>
        <description>This checks if the the active box is deactivated you cant add in new people</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>You cannot add people if the housing is deactivated.</errorMessage>
    </validationRules>
</CustomObject>